# mcp-core

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  REUSE.toml  SECURITY.md  build.rs  deny.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/design/: schema-catalog.md
examples/mcp-ui-demo/: Cargo.toml
examples/mcp-ui-demo/src/: main.rs
src/: cli.rs  lib.rs  testing.rs
src/auth/: middleware.rs
src/config/: base.rs
src/transport/: sse.rs
src/web/: catalog.rs  data_catalog.rs  landing.rs  mod.rs  search.rs  session.rs  shell.rs
tests/: demo_harness.rs
web/: .prettierignore  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
web/e2e/shell/: catalog.spec.ts  rendering.spec.ts
web/src/: app.ts  index.html.tera  styles.scss
web/src/api/: mcp-ui.ts
web/src/app/: components.ts
web/src/renderers/: catalog-item.ts  esm.ts  html.ts  json.ts  md.ts
web/src/shell/: app-shell.ts  catalog-fields.ts  catalog-list.ts  catalog-schema.ts  catalog-types.ts  content-router.ts  elements.ts  endpoints.ts  entity-list.ts  entity.ts  frame.ts  layout-full.ts  layout-list.ts  list-element.ts  markdown.ts  mcp-client.ts  navigate.ts  operations.ts  registry.ts  schema-form.ts  search-list.ts  sidebar.ts  tool.ts  top-nav.ts  types.ts  ui.ts
web/tests/unit/: catalog-fields.test.ts  mcp-client.test.ts  schema-form.test.ts  tool.test.ts
