[package]
name = "mcp-core"
description = "Common MCP and Webserver infrastructure"
version = "0.1.0"
edition = "2021"
# Highest requirement in the graph: the web_modules build-dependency, compiled for every build.
rust-version = "1.95"
authors = ["Stefan Grönke <stefan@gronke.net>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/MCPeas/mcp-core"
publish = false

[features]
default = ["full"]
# Tracing facade; opted into by bootstrap/sse/stdio/web.
tracing = ["dep:tracing"]
auth = ["dep:axum", "dep:tower", "dep:base64", "dep:subtle"]
config = ["dep:getrandom"]
bootstrap = ["tracing", "dep:tracing-subscriber"]
# MCP over legacy HTTP+SSE (two endpoints: GET /sse + POST /message). rmcp 1.7 removed
# its server-side SSE transport, but this crate hand-rolls SSE on rmcp's low-level message
# types (from `rmcp/server`), so no rmcp SSE transport feature is required.
sse = ["dep:rmcp", "rmcp/server", "dep:axum", "dep:tokio", "dep:tokio-stream", "dep:tokio-util", "dep:futures", "dep:rand", "dep:serde", "dep:serde_json", "tracing"]
# Back-compat alias for the old feature name.
transport = ["sse"]
# MCP over Streamable HTTP (rmcp 1.7+): a single content-negotiated /mcp endpoint.
streamable-http = ["dep:rmcp", "rmcp/transport-streamable-http-server", "rmcp/server", "dep:axum", "dep:tokio", "dep:tokio-util", "tracing"]
# MCP over stdio — deliberately no axum, so stdio-only consumers build slim.
stdio = ["dep:rmcp", "rmcp/transport-io", "rmcp/server", "dep:tokio", "tracing"]
# Web server harness: static files, CORS, compression, content negotiation.
web = ["dep:axum", "dep:axum-extra", "dep:tower-http", "dep:tokio", "dep:subtle", "dep:serde", "auth", "tracing"]
# Build + serve the embedded Lit + Bootstrap UI shell (data-inspection front end).
# Depends on the `web` harness (ServeDir/serve). The build-dependency compiles for every
# build; the shell bake is gated on CARGO_FEATURE_WEB_UI in build.rs.
web-ui = ["web", "dep:serde", "dep:serde_json", "dep:web_modules", "dep:include_dir"]
# Render markdown fields/content as HTML in a sandboxed iframe. Vendors the `marked` browser
# dependency and signals the shell (a meta tag) to use it; off by default so a UI that does not
# render markdown never ships `marked`. Implies `web-ui`.
web-markdown = ["web-ui"]
# Local development only: live-reload the shell, compiling `web/src` (TS/SCSS) on the fly via
# web_modules' `dev` server, with the embedded dist as fallback. Debug-only in effect (`auto()`
# serves statically in release regardless). Heavy — pulls notify + the oxc/grass toolchain into
# the *runtime* graph — so it must never be enabled in a release/CI build.
web-ui-dev = ["web-ui", "web_modules/dev"]
# Generate the TypeScript bindings for the web data contract (ts-rs). Off by default; enabled in CI
# (`cargo test --all-features`), where an export test writes web/src/shell/generated/*.ts.
ts-export = ["web-ui", "dep:ts-rs"]
# Shared CLI/config (clap).
cli = ["dep:clap"]
# Unified server builder (ties web + sse + streamable-http + stdio + cli together).
server = ["web", "sse", "streamable-http", "stdio", "cli", "auth", "bootstrap", "config"]
# Integration-test harness: spawn a consumer's server binary and drive it with a real rmcp
# CLIENT over both transports. Its own feature (not in `full`/`default`) so production builds
# never pull the client deps; consumers enable it as a dev-dependency. Compiled in CI via
# --all-features.
test-harness = ["dep:rmcp", "rmcp/client", "rmcp/transport-child-process", "rmcp/transport-streamable-http-client-reqwest", "dep:tokio", "tokio/process", "tokio/net", "tokio/time", "dep:serde", "dep:serde_json"]
# All infrastructure (incl. stdio); batteries-included default for un-migrated consumers.
full = ["auth", "config", "sse", "streamable-http", "stdio", "bootstrap"]

[dependencies]
# Web / auth features (axum stack)
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "compression-gzip"], optional = true }
base64 = { version = "0.22", optional = true }
# Constant-time token comparison (auth + web login).
subtle = { version = "2", optional = true }
# Web login: SameSite=Strict signed session cookie (axum-extra).
axum-extra = { version = "0.10", features = ["cookie-signed"], optional = true }
# TypeScript bindings for the web data contract (ts-export feature; consumed by an export test).
ts-rs = { version = "12", optional = true }

# Runtime serving of the web-ui shell (web-ui feature). `Frontend` serves the shell that build.rs
# bakes — embedded into the binary via `include_dir!` (release/CI) or live-compiled from web/src
# (web-ui-dev). `axum` only: the oxc/grass compile toolchain stays in [build-dependencies] and the
# (dev-only) `dev` feature, so a release build's runtime graph stays lean. resolver=2 keeps this
# runtime copy separate from the build-dependency copy below.
web_modules = { version = "0.5", default-features = false, features = ["axum"], optional = true }
# The `include_dir!` macro must be a direct dependency: web_modules re-exports the `Dir` type but
# the macro emits `include_dir::`-qualified paths that don't resolve through a re-export. Pin the
# same minor as web_modules' own include_dir so the `Dir` type unifies for `Frontend::embedded`.
include_dir = { version = "0.7", optional = true }

# Config feature - CSPRNG-backed token generation (OS entropy).
getrandom = { version = "0.4", optional = true }

# CLI feature
clap = { version = "4.5", features = ["derive", "env"], optional = true }

# Transport features (sse/stdio/streamable-http). `rmcp/server` provides the model,
# service and ServerHandler types the transports build on. rmcp 1.7's core no longer
# pulls axum, so this crate supplies axum itself for the sse/web/streamable-http harnesses;
# a stdio-only build still stays axum-free.
rmcp = { version = "1.7", optional = true }
tokio = { version = "1", features = ["sync", "net", "rt"], optional = true }
tokio-stream = { version = "0.1", optional = true }
tokio-util = { version = "0.7", optional = true }
futures = { version = "0.3", optional = true }
rand = { version = "0.10", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

# Bootstrap feature
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
axum = { version = "0.8" }
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
serde_json = "1"

# Build-time only: compiles the web-ui shell when the `web-ui` feature is enabled.
# web_modules' default features (typescript + scss + tera) are the oxc/grass/tera compile
# toolchain (no server runtime). build.rs no-ops without CARGO_FEATURE_WEB_UI.
[build-dependencies]
web_modules = { version = "0.5", features = ["typescript", "scss", "tera", "minify"] }
walkdir = "2"
# Hash the inlined import-map script so the runtime CSP can allow it via 'sha256-...'.
sha2 = "0.10"
base64 = "0.22"

# Root cargo commands act on mcp-core; build the demo with `-p mcp-ui-demo`. resolver 2
# keeps the build-dependency's compiler features out of the lean runtime graph.
[workspace]
members = ["examples/mcp-ui-demo"]
default-members = ["."]
resolver = "2"

[lib]
name = "mcp_core"
path = "src/lib.rs"
